fixed issue with search bar on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,3 +253,8 @@ footer.page-footer {
 .gListLandEl {
     display: none;
 }
+.search-wrapper {
+    min-width: 325px !important;
+    margin: 0 auto !important;
+    left: 5%;
+}
